# zima-blue-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CUserszhuzhAppDataLocalTemppytest_output.txt  ISSUES_TO_FIX.md  LICENSE  README.md  SESSION.md  ZIMA_CLI_ISSUES.md  Zima-v2-Design.md  cleanup.bat  cleanup.sh  pr_diff.txt  pyproject.toml  pytest_output.txt  requirements.txt  test_readme.txt
.claude/: settings.json  settings.local.json
.claude-plugin/: marketplace.json
.claude/agents/: test-reviewer.md
.github/: issue-body.md
.github/workflows/: ci.yml  integration-test.yml  publish.yml
agents/example-agent/: agent.yaml
agents/jfox-coverage-agent/: README.md  agent.yaml  agent_state.json
docs/: AGENT-PROMPT-TEMPLATE.md  API-INTERFACE.md  test-report-kimi-real.md
docs/architecture/: README.md  progress-recovery.md
docs/decisions/: 001-use-subprocess.md  002-15min-cycle.md  003-early-completion.md  004-single-execution.md
docs/design/: AGENT-PHASE-TASKS.md  CLI-INTERFACE.md  CONFIG-ENTITIES.md  ENV-DESIGN.md  IMPLEMENTATION-PLAN.md  PJOB-DESIGN.md  PMG-DESIGN.md  TEST-STRATEGY.md  WORKFLOW-DESIGN.md
docs/guides/: AGENT-PROMPT-TEMPLATE-DETAIL.md
docs/history/: agent-cycle-timeline.md  kimiworld-design.md  ralph-loop-design.md
docs/vision/: story.md
examples/workflows/: coverage-workflow-v2.yaml
plugins/pr-automation/: README.md
scripts/: README.md  cleanup.py  init_labels.py  verify-issue38.bat  verify-issue38.sh  verify_issue38_checklist.py
test_ralph_scenario/: calculator.py  task_prompt.txt  test_calculator.py
tests/: base.py  conftest.py
tests/fixtures/: mock_agent.py
tests/integration/: test_agent_commands.py  test_cli_version.py  test_daemon_commands.py  test_env_commands.py  test_example_flag.py  test_executor_actions.py  test_issue38_daemon_verification.py  test_quickstart.py  (+7 more)
zima/: __init__.py  cli.py  daemon_runner.py  scenes.py  utils.py
(+181 files in other folders)
